# bycco

./: .env  .gitignore  CHANGES.txt  MANIFEST.in  Pipfile  README.md  borden2.pgn  borden2jan.pgn  byccco.code-workspace  bycco.code-workspace  credentials-gmail.json.secret  grote_zaal.pgn  kleine_zaal.pgn  launch  make_release.py  manage.py  package.json  prepareDb.py  requirements.txt  setup  setup.py  setupcms.py  test_email.py  testsubscription.py
backend/: AUTHORS  ChangeLog  MANIFEST.in  fixes.py  launch.py  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
backend/bycco/: __init__.py  bycco_settings.py  context_processor.py  mailgun.py  routes.py  settings.py  static.py  urls.py  util.py  views.py
backend/bycco.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
backend/bycco/api/: __init__.py  api_account.py  api_attendee.py  api_document.py  api_lang.py  api_page.py  api_playerlist.py  api_subscription.py  api_swar.py
backend/bycco/crud/: __init__.py  db_playersqlite.py  db_subscription.py  db_swar.py
backend/bycco/i18n/: __init__.py  de.py  en.py  fr.py  nl.py
backend/bycco/models/: __init__.py  md_account.py  md_article.py  md_belplayer.py  md_counters.py  md_document.py  md_page.py  md_playerlist.py  md_subscription.py  md_swar.py
backend/bycco/scripts/: csv2lang.py  fetch_belsqlite.py  fetch_fide.py  fetchfide.py  fetchplayerdbf.py  fixnumbers.py  lang_all.csv  superuser.py
backend/bycco/service/: __init__.py  mail.py  mailbackend.py  sv_account.py  sv_attendee.py  sv_doc.py  sv_lang.py  sv_page.py  sv_playerlist.py  sv_subscription.py  sv_swar.py
backend/byccoarticles/: __init__.py  admin.py  apiurls.py  apiviews.py  apps.py  cms_plugins.py  models.py  tests.py  urls.py  views.py
backend/subscription/: apiviews.py  fixrr.py  lifechess.py  mail.py  swarconvert.py  urls.py  views.py
backend/tournament/: admin.py  apiurls.py  apiviews.py  invoice.py  lifechess.py  mail.py  models.py  pgnexport.py  sendsms.py  serializers.py  swar.py  urls.py  views.py
(+645 files in other folders)
