[metadata]
name = bycco
description = BYC 2019
long_description = Belgian Youth Chess Cheampionships 2019
classifiers =
    "Programming Language :: Python"
    "Framework :: Django-cms"

author = Ruben Decrop
author_email = ruben@decrop.net
url = https://www.bycco.be
keywords =
    chess
    youth
    chempionships
    Belgium
    2019
packages = pbr

[files]
packages =
    bycco
    tournament

[entry_points]
console_scripts =
    pbr = pbr.cmd:main
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain